# cedula_uruguaya

./: .gitignore  pyproject.toml  setup.py
cedula_uruguaya/: __init__.py  main.py
src/: __init__.py
tests/: __init__.py
